--- a/.gitattributes
+++ b/.gitattributes
@@ -33,4 +33,11 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.zst filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
-voice_examples/wizard.wav filter=lfs diff=lfs merge=lfs -text
+voice_examples/en_woman.wav filter=lfs diff=lfs merge=lfs -text
+voice_examples/mabel.wav filter=lfs diff=lfs merge=lfs -text
+voice_examples/vex.wav filter=lfs diff=lfs merge=lfs -text
+voice_examples/zh_man_sichuan.wav filter=lfs diff=lfs merge=lfs -text
+voice_examples/belinda.wav filter=lfs diff=lfs merge=lfs -text
+voice_examples/broom_salesman.wav filter=lfs diff=lfs merge=lfs -text
+voice_examples/chadwick.wav filter=lfs diff=lfs merge=lfs -text
+voice_examples/en_man.wav filter=lfs diff=lfs merge=lfs -text
