--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 descript-audio-codec
-torch==2.5.1
-torchaudio==2.5.1
+#torch==2.5.1
+#torchaudio==2.5.1
 transformers>=4.45.1,<4.47.0
 librosa
 dacite
